[FIX] wrong margin

--- a/src/styles/explanation.css
+++ b/src/styles/explanation.css
@@ -10,4 +10,8 @@ section#explanation {
     font-size: 1.5rem;
     color: hsl(0, 0%, 19%);
   }
+
+  p {
+    margin-block: 1rem;
+  }
 }
