--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,6 @@ p {
   font-size: 1rem;
 
   max-width: 75ch;
-
-  margin-inline: auto;
 }
 .card {
   box-shadow: 0 0 1px 2px hsl(0, 3%, 81%);
